--- a/css/cookieStyles.css
+++ b/css/cookieStyles.css
@@ -70,3 +70,20 @@ aside {
 }
 /*UPGRADE BAR*/
 
+
+#trans-bg {
+  display: none;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.527);
+  justify-content: center;
+  align-items: center;
+}
+#over-Menu {
+  width: 80%;
+  height: 80%;
+  background-color: hsl(221, 85%, 84%);
+  border: 6px hsl(222, 75%, 71%) solid;
+  border-radius: 20px;
+}
